--- a/AdminFrontend/src/app/navbar/navbar.component.html
+++ b/AdminFrontend/src/app/navbar/navbar.component.html
@@ -13,8 +13,8 @@
   
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a  class="navbar-item" (click)="goToCreateSertifikat()" *ngIf="getRole()==='ROLE_ADMIN'">
-          Create Sertifikat
+        <a  class="navbar-item" (click)="goToCreateZahtevZaSertifikat()" *ngIf="getRole()==='ROLE_ADMIN'">
+          Create zahtev za sertifikat
         </a>
   
         <div class="navbar-item has-dropdown is-hoverable" *ngIf="getRole()==='ROLE_ADMIN'">
