--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-zahtev-za-sertifikat/view-zahtev-za-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-zahtev-za-sertifikat/view-zahtev-za-sertifikat.component.html
@@ -80,8 +80,9 @@
 		</div>
     </form>
     <div class="block">
+        
+        <button class="button is-outlined" (click)="natrag()">Natrag</button>&nbsp;&nbsp;
         <button class="button is-danger is-outlined" (click)="delete2()">Izbrisi</button>&nbsp;&nbsp;
-        <button class="button is-warning is-outlined" (click)="natrag()">Natrag</button>
-
+        <button class="button is-outlined" (click)="napraviSertifikat()">Napravi sertifikat</button>
     </div>
 </div>
