uradjeno povlacenje sertifikata na frontend

--- a/AdminFrontend/src/app/navbar/navbar.component.html
+++ b/AdminFrontend/src/app/navbar/navbar.component.html
@@ -30,6 +30,10 @@
             <a class="navbar-item" (click)="goToSviSertifikati()">
               Svi sertifikati
             </a>
+            <hr class="navbar-divider">
+            <a class="navbar-item" (click)="goToSviPovuceniSertifikati()">
+              Povuceni sertifikati
+            </a>
           </div>
         </div>
       </div>
