--- a/AdminFrontend/src/app/SERTIFIKAT/view-all-sertifikat/view-all-sertifikat.component.html
+++ b/AdminFrontend/src/app/SERTIFIKAT/view-all-sertifikat/view-all-sertifikat.component.html
@@ -44,13 +44,13 @@
         </tr>
     </tfoot>
     <tbody *ngFor="let sertifikat of lista">
-        <tr (click)="idiNaZahtev(sertifikat.alias)">
+        <tr (click)="povlacenjeSertifikata(sertifikat.alias)">
             <td>{{sertifikat.alias}}</td>
             <td>{{sertifikat.namena}}</td>
             <td>{{sertifikat.startDate}}</td>
             <td>{{sertifikat.endDate}}</td>
             <td>{{sertifikat.subjectEmail}}</td>
-            <td>{{sertifikat.korisnik.email}}</td>
+            <td>{{sertifikat.adminEmail}}</td>
         </tr>
     </tbody>
 </table>
