--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/create-zahtev-za-sertifikat/create-zahtev-za-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/create-zahtev-za-sertifikat/create-zahtev-za-sertifikat.component.html
@@ -21,10 +21,10 @@
         </div>
         <div [ngClass]="['form-group','block','select is-rounded']">
             <select formControlName="namena" (change)="pokazivanjeElemenata($event)">
-                <option value="1">Korisnik</option>
-                <option value="2">Moja kuca aplikacija</option>
-                <option value="3">Uredjaj</option>
-                <option value="0">Admin aplikacija</option>
+                <option value="Korisnik">Korisnik</option>
+                <option value="Moja kuca aplikacija">Moja kuca aplikacija</option>
+                <option value="Uredjaj">Uredjaj</option>
+                <option value="Admin aplikacija">Admin aplikacija</option>
             </select>
         </div>
         <div *ngIf="pokazivanje===1">
