--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-zahtev-za-sertifikat/view-zahtev-za-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-zahtev-za-sertifikat/view-zahtev-za-sertifikat.component.html
@@ -76,13 +76,13 @@
             </div>
         </div><br>
         <div [ngClass]="['form-group','block']">
-    		<button type="submit" [ngClass]="['btn btn-primary btn-block',status2 ? 'button is-warning is-outlined' : 'button is-warning is-outlined is-loading']" [disabled]="createForm.invalid">Promeni zahtev</button>
+    		<button *ngIf="getRole()==='ROLE_MUSTERIJA'" type="submit" [ngClass]="['btn btn-primary btn-block',status2 ? 'button is-warning is-outlined' : 'button is-warning is-outlined is-loading']" [disabled]="createForm.invalid">Promeni zahtev</button>
 		</div>
     </form><br>
     <div class="block">
         
         <button class="button is-outlined" (click)="natrag()">Natrag</button>&nbsp;&nbsp;
         
-        <button [ngClass]="[status ? 'button is-danger is-outlined' : 'button is-danger is-outlined is-loading']" (click)="napraviSertifikat()">Napravi sertifikat</button>
+        <button *ngIf="getRole()==='ROLE_ADMIN'" [ngClass]="[status ? 'button is-danger is-outlined' : 'button is-danger is-outlined is-loading']" (click)="napraviSertifikat()">Napravi sertifikat</button>
     </div>
 </div>
