--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-all-zahtev-sertifikat/view-all-zahtev-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-all-zahtev-sertifikat/view-all-zahtev-sertifikat.component.html
@@ -2,10 +2,10 @@
     <thead>
         <tr>
             <th>
-                Start date
+                Početni datum
             </th>
             <th>
-                End date
+                Datum završetka
             </th>
             <th>
                 Namena
@@ -17,17 +17,17 @@
                 <abbr title="Potvrdjen zahtev od emaila">PZE</abbr>
             </th>
             <th>
-                Prihvacen zahtev
+                Prihvaćen zahtev
             </th>
         </tr>
     </thead>
     <tfoot>
         <tr>
             <th>
-                Start date
+                Početni datum
             </th>
             <th>
-                End date
+                Datum završetka
             </th>
             <th>
                 Namena
@@ -39,7 +39,7 @@
                 <abbr title="Potvrdjen zahtev od emaila">PZE</abbr>
             </th>
             <th>
-                Prihvacen zahtev
+                Prihvaćen zahtev
             </th>
         </tr>
     </tfoot>
