--- a/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-zahtev-za-sertifikat/view-zahtev-za-sertifikat.component.html
+++ b/AdminFrontend/src/app/ZAHTEV-ZA-SERTIFIKAT/view-zahtev-za-sertifikat/view-zahtev-za-sertifikat.component.html
@@ -2,23 +2,27 @@
 <div id = "zahtevSertifikat" style="text-align: center;width: 20%;margin-left: 40%;">
     <form [formGroup]="createForm" (ngSubmit)="update()">
         <div [ngClass]="['form-group','block']">
+            <p>Datum početka</p>
             <input type="datetime-local" [ngClass]="['form-control','input']" formControlName="startDate">
 			<small style="color: red;"
 				*ngIf="createForm.controls.startDate.touched && createForm.controls.startDate.errors?.required">
-				Start date is required</small>
+				Neophodan je datum početka</small>
         </div>
         <div [ngClass]="['form-group','block']">
+            <p>Datum završetka</p>
             <input type="datetime-local" [ngClass]="['form-control','input']" formControlName="endDate">
 			<small style="color: red;"
 				*ngIf="createForm.controls.endDate.touched && createForm.controls.endDate.errors?.required">
-				End date is required</small>
+				Datum završetka je obavezan</small>
         </div>
         <div [ngClass]="['form-group','block']">
+            <p>Email Potvrda</p>
             <input type="text" [ngClass]="['form-control','input']" formControlName="emailPotvrda" placeholder="Email Potvrda">
             <small style="color: red;"
                 *ngIf="createForm.controls.emailPotvrda.touched && createForm.controls.emailPotvrda.errors?.required">
-                Email Potvrda is required</small>
+                Email Potvrda je obavezna</small>
         </div>
+        <p>Templejt</p>
         <div [ngClass]="['form-group','block','select is-rounded']">
             <select formControlName="namena" (change)="pokazivanjeElemenata($event)">
                 <option value="Korisnik">Korisnik</option>
@@ -29,18 +33,21 @@
         </div>
         <div *ngIf="pokazivanje===1">
             <div [ngClass]="['form-group','block']">
+                <p>Email</p>
                 <input type="text" [ngClass]="['form-control','input']" formControlName="email" placeholder="Email">
                 <small style="color: red;"
                     *ngIf="createForm.controls.email.touched && createForm.controls.email.errors?.required">
-                    Email is required</small>
+                    Email je obavezan</small>
             </div>
             <div [ngClass]="['form-group','block']">
+                <p>Ime</p>
                 <input type="text" [ngClass]="['form-control','input']" formControlName="ime" placeholder="Ime">
                 <small style="color: red;"
                     *ngIf="createForm.controls.ime.touched && createForm.controls.ime.errors?.required">
                     Ime is required</small>
             </div>
             <div [ngClass]="['form-group','block']">
+                <p>Prezime</p>
                 <input type="text" [ngClass]="['form-control','input']" formControlName="prezime" placeholder="Prezime">
                 <small style="color: red;"
                     *ngIf="createForm.controls.prezime.touched && createForm.controls.prezime.errors?.required">
@@ -49,6 +56,7 @@
         </div>
         <div *ngIf="pokazivanje===2">
             <div [ngClass]="['form-group','block']">
+                <p>Serijski Broj</p>
                 <input type="text" [ngClass]="['form-control','input']" formControlName="serijskiBroj" placeholder="Serijski Broj">
                 <small style="color: red;"
                     *ngIf="createForm.controls.serijskiBroj.touched && createForm.controls.serijskiBroj.errors?.required">
@@ -57,18 +65,21 @@
         </div>
         <div *ngIf="pokazivanje===3">
             <div [ngClass]="['form-group','block']">
+                <p>Naziv</p>
                 <input type="text" [ngClass]="['form-control','input']" formControlName="naziv" placeholder="Naziv">
                 <small style="color: red;"
                     *ngIf="createForm.controls.naziv.touched && createForm.controls.naziv.errors?.required">
                     naziv is required</small>
             </div>
             <div [ngClass]="['form-group','block']">
+                <p>Svrha</p>
                 <input type="text" [ngClass]="['form-control','input']" formControlName="svrha" placeholder="Svrha">
                 <small style="color: red;"
                     *ngIf="createForm.controls.svrha.touched && createForm.controls.svrha.errors?.required">
                     svrha is required</small>
             </div>
             <div [ngClass]="['form-group','block']">
+                <p>Serijski Broj</p>
                 <input type="text" [ngClass]="['form-control','input']" formControlName="serijskiBroj" placeholder="Serijski Broj">
                 <small style="color: red;"
                     *ngIf="createForm.controls.serijskiBroj.touched && createForm.controls.serijskiBroj.errors?.required">
