--- a/AdminFrontend/src/app/SERTIFIKAT/view-all-sertifikat/view-all-sertifikat.component.html
+++ b/AdminFrontend/src/app/SERTIFIKAT/view-all-sertifikat/view-all-sertifikat.component.html
@@ -8,10 +8,10 @@
                 Namena
             </th>
             <th>
-                Start Date
+                Početni datum
             </th>
             <th>
-                End Date
+                Datum završetka
             </th>
             <th>
                 Subject Email
@@ -30,10 +30,10 @@
                 Namena
             </th>
             <th>
-                Start Date
+                Početni datum
             </th>
             <th>
-                End Date
+                Datum završetka
             </th>
             <th>
                 Subject Email
