Dodato za ekstenzije u modelu na frontend

--- a/AdminFrontend/src/app/KORISNIK/login/login.component.html
+++ b/AdminFrontend/src/app/KORISNIK/login/login.component.html
@@ -25,6 +25,19 @@
 		</div>
     </form>
 </div>
+<!-- Button to trigger the modal -->
+<button class="button is-primary" data-target="modal">Open Modal</button>
+
+<!-- Modal -->
+<div class="modal" id="modal">
+  <div class="modal-background"></div>
+  <div class="modal-content">
+    <!-- Modal content goes here -->
+	nesto
+  </div>
+  <button class="modal-close is-large" aria-label="close"></button>
+</div>
+
 
  
   
